--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -39,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background="@drawable/roundedtop"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:text="@string/txt_notsmokingsince"
@@ -52,7 +52,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background="@drawable/roundedtop"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:text="@string/txt_moneysaved"
@@ -72,7 +72,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background="@drawable/roundedbottom"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:textColor="@android:color/white" />
@@ -85,7 +85,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background="@drawable/roundedbottom"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:textColor="@android:color/white" />
@@ -102,7 +102,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background="@drawable/roundedtop"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:text="@string/txt_cigarettesnotsmoked"
@@ -115,7 +115,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background="@drawable/roundedtop"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:text="@string/txt_lifetimesaved"
@@ -135,7 +135,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background="@drawable/roundedbottom"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:textColor="@android:color/white" />
@@ -148,7 +148,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background="@drawable/roundedbottom"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:textColor="@android:color/white" />
@@ -181,7 +181,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -197,7 +197,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -218,7 +218,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -234,7 +234,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -255,7 +255,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -271,7 +271,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -305,7 +305,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -321,7 +321,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -342,7 +342,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -357,7 +357,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -376,7 +376,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -391,7 +391,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -410,7 +410,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -425,7 +425,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -444,7 +444,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -459,7 +459,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -478,7 +478,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -493,7 +493,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -512,7 +512,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -527,7 +527,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
-                    android:background="#777777"
+                    android:background= "@drawable/allroundedcorners"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
