--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -23,7 +23,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
-                android:background="#777777"
+                android:background="@drawable/roundedtop"
                 android:padding="5dp"
                 android:text="@string/txt_nicotineinblood"
                 android:textColor="@android:color/white"
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:background="#777777"
+                android:background="@drawable/roundedbottom"
                 android:padding="5dp"
                 android:textColor="@android:color/white" />
 
@@ -47,7 +47,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginRight="10dp"
-                android:background="@android:color/white"
+                android:background="@drawable/roundedcornerswhite"
                 android:max="100"
                 android:progressTint="@color/ic_pb" />
 
@@ -58,7 +58,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
-                android:background="#777777"
+                android:background="@drawable/roundedtop"
                 android:padding="5dp"
                 android:text="@string/txt_smelltaste"
                 android:textColor="@android:color/white"
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:background="#777777"
+                android:background="@drawable/roundedbottom"
                 android:padding="5dp"
                 android:textColor="@android:color/white" />
 
@@ -82,7 +82,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginRight="10dp"
-                android:background="@android:color/white"
+                android:background="@drawable/roundedcornerswhite"
                 android:max="100"
                 android:progressTint="@color/ic_pb" />
 
@@ -93,7 +93,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
-                android:background="#777777"
+                android:background="@drawable/roundedtop"
                 android:padding="5dp"
                 android:text="@string/txt_skin"
                 android:textColor="@android:color/white"
@@ -105,7 +105,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:background="#777777"
+                android:background="@drawable/roundedbottom"
                 android:padding="5dp"
                 android:textColor="@android:color/white" />
 
@@ -117,7 +117,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginRight="10dp"
-                android:background="@android:color/white"
+                android:background="@drawable/roundedcornerswhite"
                 android:max="100"
                 android:progressTint="@color/ic_pb" />
 
@@ -128,7 +128,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
-                android:background="#777777"
+                android:background="@drawable/roundedtop"
                 android:padding="5dp"
                 android:text="@string/txt_breath"
                 android:textColor="@android:color/white"
@@ -140,7 +140,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:background="#777777"
+                android:background="@drawable/roundedbottom"
                 android:padding="5dp"
                 android:textColor="@android:color/white" />
 
@@ -152,7 +152,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginRight="10dp"
-                android:background="@android:color/white"
+                android:background="@drawable/roundedcornerswhite"
                 android:max="100"
                 android:progressTint="@color/ic_pb" />
 
@@ -163,7 +163,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
-                android:background="#777777"
+                android:background="@drawable/roundedtop"
                 android:padding="5dp"
                 android:text="@string/txt_heartDisease"
                 android:textColor="@android:color/white"
@@ -175,7 +175,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:background="#777777"
+                android:background="@drawable/roundedbottom"
                 android:padding="5dp"
                 android:textColor="@android:color/white" />
 
@@ -187,7 +187,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginRight="10dp"
-                android:background="@android:color/white"
+                android:background="@drawable/roundedcornerswhite"
                 android:max="100"
                 android:progressTint="@color/ic_pb" />
 
@@ -198,7 +198,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
-                android:background="#777777"
+                android:background="@drawable/roundedtop"
                 android:padding="5dp"
                 android:text="@string/txt_cancerRisk"
                 android:textColor="@android:color/white"
@@ -210,7 +210,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:background="#777777"
+                android:background="@drawable/roundedbottom"
                 android:padding="5dp"
                 android:textColor="@android:color/white" />
 
@@ -223,7 +223,7 @@
                 android:layout_marginTop="3dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="30dp"
-                android:background="@android:color/white"
+                android:background="@drawable/roundedcornerswhite"
                 android:progressTint="@color/ic_pb" />
 
         </LinearLayout>
